--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   text-align: center;
   min-height: 100vh;
   background: #f2c5c5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .header {
   width: 100%;
@@ -19,6 +22,7 @@
   font-size: 2rem;
   letter-spacing: 1.5px;
   word-spacing: 10px;
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.1);
 }
 
 .card-container {
@@ -30,6 +34,7 @@
   margin: 100px auto;
   border-radius: 10px;
   padding: 50px 100px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1),  0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 .progress-bar {
@@ -67,13 +72,10 @@
   display: flex;
   justify-content: space-between;
 }
-.footer-container {
-  bottom: 0;
-  width: 100%;
-}
+
 .footer {
   color: rgb(135, 121, 121);
-  padding: 10px;
+  padding: 20px 0;
   display: flex;
   align-items: center;
   justify-content: center;
